# get-native-properties

./: README.md  pyproject.toml
.github/workflows/: ci.yml  lint.yml  platform-smoke.yml
tests/: test_get_native_properties.py
tests/fixtures/get_native_properties/: armv5.cpuinfo  armv6.cpuinfo  armv7.cpuinfo  armv7_neon.cpuinfo  armv8.cpuinfo  armv8_dotprod.cpuinfo  darwin_x86_64_avx2.sysctl  darwin_x86_64_avx512icl.sysctl  e2k.cpuinfo  loongarch64.cpuinfo  loongarch64_lasx.cpuinfo  loongarch64_lsx.cpuinfo  ppc32.cpuinfo  ppc64_no_altivec.cpuinfo  ppc64_power6_altivec.cpuinfo  ppc64_power9_altivec.cpuinfo  riscv64.cpuinfo  x86_32_base.cpuinfo  x86_32_sse2.cpuinfo  x86_32_sse41_popcnt.cpuinfo  x86_64_amd_zen12_exclude_bmi2.cpuinfo  x86_64_avx2.cpuinfo  x86_64_avx512.cpuinfo  x86_64_avx512icl.cpuinfo  x86_64_avxvnni.cpuinfo  x86_64_bmi2_only.cpuinfo  x86_64_sse3_popcnt_pni.cpuinfo  x86_64_sse41_popcnt.cpuinfo  x86_64_ssse3.cpuinfo  x86_64_vnni512.cpuinfo
