[project]
name = "get-native-properties"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.14.13",
    "ty>=0.0.12",
]

[tool.ruff.lint]
# Sort imports (isort rules).
extend-select = ["I"]
